# dreamlayer

./: .all-contributorsrc  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  CONTRIBUTORS.md  DREAM_MODE.md  FIRST_DEVICE_TEST_PLAN.md  NOTICE  README.md  SECURITY.md  ai-brain.html  architecture.html  attention-focus.html  brain-app.html  builders.html  glasses-experience.html  glossary.html  hardware-seams.html  hud-cards.html  index.html  lenses.html  main.py  meridian.html  oracle.html  perception-memory.html  phone-app.html  privacy.html  progression.html  pyproject.toml  test_local.sh  truth.html
host-python/: .gitignore  README.md  pyproject.toml
host-python/packaging/: README.md  app_main.py  entitlements.plist  make_dmg_art.py  make_dock_icon.py  make_fullbleed_icon.py  setup_app.py
host-python/packaging/windows/: DreamLayer.spec  installer.iss  make_ico.py  make_installer_art.py
host-python/src/dreamlayer/: __init__.py  capabilities.py  cli.py  config.py  differential_privacy.py  lenses.py  logging_setup.py  main.py  model_guard.py  nlp_setup.py  pairing.py  pairing_ratelimit.py  rosetta.py  rosetta_seamless.py  saga.py  secret_store.py  soundlink.py
host-python/src/dreamlayer/ai_brain/: __init__.py  cloud.py  dashboard_rich.py  litellm_backend.py  menubar.py  mlx_backend.py  perception.py  remote.py  router.py  tray_windows.py  updater.py  verify.py  webview_window.py  webview_window_windows.py
host-python/src/dreamlayer/bridge/: frame_sdk.py  lua_loader.py  lua_raster.py  real_bridge.py
host-python/src/dreamlayer/confluence/: bond.py  crossing.py  duet.py  emitter_pyee.py  mesh.py
host-python/src/dreamlayer/demo/: STORYBOARDS.md  __main__.py  storyboards.py
host-python/src/dreamlayer/dream_mode/: __init__.py  dream_style.py  engine.py  ghost_layer.py  imu_reactor.py  mic_reactor.py  place_reactor.py  premonition.py  prism.py  scene_describer.py  sprite_bridge.py  weather_ledger.py  yesterlight.py
host-python/src/dreamlayer/ember/: __init__.py  ceremony.py  engram.py  grading.py  scheduler.py  store.py  tending.py
host-python/src/dreamlayer/hud/: audio.py  cards.py  export.py  export_cinema_v2_golden.py  golden_images.py  motion_math.py  renderer.py  themes.py
host-python/src/dreamlayer/lucid_recall/: mem0_layer.py  router.py
host-python/src/dreamlayer/memory/: ann_index.py  chroma_store.py  datasette_app.py  db.py  doc_schema.py  embedder_local.py  embeddings.py  graph_recall.py  lance_store.py  pii_presidio.py  privacy.py  rehearsal_fsrs.py  retention.py  retrieval.py  ring_buffer.py  source_activitywatch.py  source_dawarich.py  source_immich.py  source_screenpipe.py  vector_store.py
host-python/src/dreamlayer/object_lens/: barcode_backends.py  barcode_lens.py  classify_backends.py  label.py  lens.py  ocr_backends.py  person_guard.py  providers.py  recognizer.py  sky_lens.py  translate.py  vision_extras.py  vision_recognizer.py
host-python/src/dreamlayer/orchestrator/: _ops_helpers.py  _ops_host.py  adaptive_confidence.py  answer_ahead.py  anticipation.py  asr_faster_whisper.py  asr_moonshine.py  asr_select.py  attention.py  bird_lens.py  candor.py  capture.py  capture_provenance.py  commands.py  commitment_drift.py  consistency.py  conversation.py  discernment.py  discovery_zeroconf.py  fs_watch.py  glance.py  hidden_layer.py  home_bridge.py  horizon_composer.py  maturity.py  mesh_bridge.py  ops_brain_switches.py  ops_commitments.py  ops_confluence.py  ops_conversation.py  ops_dream_rem.py  ops_ember.py  ops_ingest.py  ops_juno_attention.py  ops_messages.py  ops_oracle_attention.py  ops_plugins.py  ops_world_lenses.py  orchestrator.py  persona.py  (+17 more)
host-python/src/dreamlayer/pipelines/: ingest.py  llm_client.py  lsl_transport.py  vision.py
host-python/src/dreamlayer/plugins/: _egress.py  air_drums.py  base.py  currency.py  dreamlayer.wit  extism_host.py  face_synth.py  filler.py  first_party.json  hookspecs.py  isolation.py  open_meteo.py  openfoodfacts.py  openlibrary.py  os_sandbox.py  package.py  pokemon_price.py  reactions.py  registry_client.py  skywatch_adsb.py  social.py  store.py  validate.py  vinyl_oracle.py  wasm_component_host.py
host-python/src/dreamlayer/privacy/: __init__.py  egress_seal.py
host-python/src/dreamlayer/reality_compiler/: __init__.py  compiler.py  emulator.py  intent_parser.py  schema.py  sign_crypto.py  template_library.py
host-python/src/dreamlayer/rem/: __init__.py  bias.py  cycle.py  poet.py  reel.py
host-python/src/dreamlayer/sdk/: __init__.py  discovery.py  preview.py  protocols.py
host-python/src/dreamlayer/simulator/: __init__.py  core.py  page.py  rerun_viz.py  scenarios.py  server.py
host-python/src/dreamlayer/social_lens/: __init__.py  analyzer.py  commitment_ner.py  embedder.py  enricher.py  index.py  introduction.py  introductions.py  meeting.py  renderer.py  schema.py
host-python/src/dreamlayer/testkit/: dst.py
host-python/src/dreamlayer/tests/: conftest.py  test_aaa_audit_2026_07_20.py  test_aaa_reaudit_2026_07_20.py  test_activity_receipt.py  test_adaptive_confidence.py  test_ai_brain.py  test_ai_brain_macos.py  test_ai_brain_server.py  test_alt_vector_stores_ranking.py  test_ann_recall_at_scale.py  test_answer_ahead.py  test_app_icon.py  test_appliance_token_entropy.py  test_attention.py  test_audit_new_additions_2026_07_15.py  test_barcode_lens.py  test_brain_auth_posture.py  test_brain_capabilities.py  test_brain_controls.py  test_brain_csrf_write_guard.py  test_brain_plugins.py  test_brain_rc.py  test_budgets_boundaries.py  test_bug_report.py  test_candor.py  test_capabilities.py  test_capabilities_stats.py  test_capture_pipeline.py  test_capture_provenance.py  test_capture_thread_safety.py  test_chroma_store_real.py  test_cinema_v2_golden.py  test_cli.py  test_cli_memories_trinity.py  test_cloud_providers.py  test_cloud_seams.py  test_commitment_drift.py  test_config_perms.py  test_confluence.py  test_consent_recognition.py  (+213 more)
host-python/src/dreamlayer/truth_lens/: __init__.py  analyzer.py  au_detector.py  face_embed.py  fusion.py  linguistic.py  narrative_store.py  (+3 more)
(+492 files in other folders)
