[project]
name = "memoscape"
version = "0.1.0"
description = "Wearable memory assistant — Frame glasses + AI recall"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
memoscape = "main:_main"

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memoscape"]
