[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlayer"
version = "0.6.1"
description = "Memory engine for Brilliant Labs Halo glasses"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "numpy>=1.26",
    "openai>=1.30",
]

# The `dreamlayer` CLI: build, validate, package, and install plugins.
# Stdlib-only, so it ships with the base install.
[project.scripts]
dreamlayer = "dreamlayer.cli:main"

[project.optional-dependencies]
# lupa runs the halo-lua test suites (pinned to lupa.lua53 = device Lua)
dev      = ["pytest>=8", "pytest-asyncio>=0.23", "lupa>=2.0", "pytest-benchmark>=4", "hypothesis>=6", "pytest-cov>=4", "qrcode>=7", "ruff>=0.5", "mypy>=1.8"]
# proofs: CrossHair symbolically verifies the on-glass safety caps in
# reality_compiler/v2/contracts.py (skipped when crosshair-tool is absent).
verify   = ["crosshair-tool>=0.0.60"]
# mutation: mutmut mutation-tests the safety core — proves the tests actually
# catch bugs, not just pass. Run on demand: see .github/workflows/mutation.yml.
mutation = ["mutmut>=3.0"]
hardware = ["brilliant-ble", "brilliant-msg"]
dream    = ["brilliant-msg", "Pillow>=10"]   # pip install dreamlayer[dream]

# --- Optional integration groups (adapters lazy-import these; every one has a
#     working fallback, so the core system runs with none of them installed) ---
memory   = ["sqlite-vec", "chromadb", "sentence-transformers", "model2vec", "mem0ai", "lancedb", "usearch", "docarray", "networkx"]
voice    = ["silero-vad", "faster-whisper", "openwakeword", "sounddevice", "sherpa-onnx"]
asr-extra = ["whisperx"]
structured = ["outlines", "instructor", "pydantic>=2", "pydantic-ai"]
llm      = ["litellm"]
intelligence = ["speechbrain", "spacy", "river", "human-learn", "supervision"]
vision   = ["ultralytics", "moondream", "open-clip-torch", "coremltools; sys_platform=='darwin'", "mlx-vlm; sys_platform=='darwin'"]
causal   = ["dowhy"]
# serverless, conflict-free multi-device Vault sync (reality_compiler/v2/vault_sync.py)
sync     = ["loro>=1.0"]
infra    = ["rich", "watchdog", "zeroconf", "datasette", "rerun-sdk"]
# Security-critical: keep a floor below which known CVEs live (audit 2026-07-14).
# cryptography>=48.0.1 clears GHSA-537c-gmf6-5ccf (the unconstrained resolver
# otherwise settles on the vulnerable 46.0.7); presidio floors match the modern
# analyzer API. pip-audit (dep-audit.yml) gates the rest.
privacy  = ["cryptography>=48.0.1", "presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "anyio>=4", "c2pa-python"]
platform = ["pluggy", "pyee", "argostranslate", "skia-python", "fastapi", "uvicorn", "frame-sdk", "pylsl", "wasmtime", "cbor2", "mlx; sys_platform=='darwin'", "mlx-lm; sys_platform=='darwin'"]

# --- Deployment profiles: one install per target, composed from the groups
#     above via self-referential extras. Pick ONE per machine:
#       pip install -e ".[profile-mac]"        (or: uv sync --extra profile-mac)
#     `python -m dreamlayer.capabilities` then reports what switched on.
#     tests/test_capabilities.py asserts these stay in sync with capabilities.py. ---
profile-halo  = ["dreamlayer[hardware]"]                       # bridge host next to the glasses: BLE only
profile-phone = ["dreamlayer[memory,voice,structured,llm]"]    # pocket hub: local recall + STT, no heavy vision
profile-mac   = ["dreamlayer[memory,voice,asr-extra,structured,llm,intelligence,vision,causal,infra,privacy,platform]"]  # the full Brain
profile-cloud = ["dreamlayer[structured,llm,intelligence,causal,privacy]"]  # remote runner: reasoning, no device/local-model stack

[tool.uv]
# The brilliant-msg extras (glasses-bridge host: pillow>=11) and the
# moondream/vision extras (Mac Brain: pillow<11) pin incompatible pillow
# ranges. They target different machines — the profiles above say "pick ONE
# per machine" — so declare every cross-machine pair conflicting instead of
# letting the incompatibility block the universal lock.
conflicts = [
    [{ extra = "dream" },        { extra = "vision" }],
    [{ extra = "dream" },        { extra = "profile-mac" }],
    [{ extra = "hardware" },     { extra = "vision" }],
    [{ extra = "hardware" },     { extra = "profile-mac" }],
    [{ extra = "profile-halo" }, { extra = "vision" }],
    [{ extra = "profile-halo" }, { extra = "profile-mac" }],
]

[tool.setuptools.package-data]
# ship the control-panel imagery (cinematic stills, HUD explainer thumbnails)
# so it's installed with the package and lands in the py2app .dmg bundle.
dreamlayer = [
    "ai_brain/server/assets/*.webp",
    "ai_brain/server/assets/*.png",
    "ai_brain/server/assets/*.woff2",
    "py.typed",                       # PEP 561: ship inline types to SDK consumers
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Gate on the rules that catch real defects, not house style. The codebase
# deliberately uses compact one-liners (semicolons, colon-bodies) in the data
# layer, so the E7-series style rules are out; pyflakes (F) is the signal —
# unused imports/vars, redefinitions, undefined names, f-strings with no
# placeholder — plus E9 (syntax/IO errors). A clean tree here means a
# contributor can't quietly land dead code.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# Package __init__.py files re-export their public surface; those imports are
# "unused" only to a linter.
"__init__.py" = ["F401"]
# Tests routinely bind an intermediate to name a step (`before = count()`), so
# unused-local (F841) is noise there; the source tree is held to it.
"src/dreamlayer/tests/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["src/dreamlayer/tests", "src/dreamlayer/tests"]
markers = [
    "hardware: needs a real Halo device / hardware deps (deselected in CI)",
    "benchmark: latency-budget test via pytest-benchmark (deselected in CI)",
    "real_model: needs heavy ML deps installed (MiniLM/CLIP/moondream); deselected in the default job, run by the real-models workflow",
]

[tool.mutmut]
# Mutation-test the whole on-glass safety core (P2-13 widened this from
# contracts.py alone): the caps the "data, not code" argument rests on
# (contracts.py), the static prover (budgets.py), the WCAG eye-safety analyzer
# (flash_safety.py), and the deploy trust anchor (signer.py). Each file has a
# dedicated killer suite listed below; the CrossHair proofs are complementary
# but blind to mutmut (it swaps the body behind a dispatcher CrossHair's
# source read can't see). vault_sync.py stays out: it needs the loro extra,
# which the mutation runner doesn't install.
#
# Enforcement (.github/workflows/mutation.yml) is per-file survivor CEILINGS,
# not a blanket zero: contracts.py and signer.py hold at zero survivors, while
# budgets.py and flash_safety.py carry documented non-behavioral residuals
# (mutants of diagnostic message strings and provably-equivalent forms — see
# test_budgets_boundaries.py / test_flash_safety_unit.py docstrings). The
# ceilings are the measured residual counts, so any NEW test hole still fails
# the job while the documented residue doesn't ratchet.
source_paths = ["src/dreamlayer"]
only_mutate = [
    "src/dreamlayer/reality_compiler/v2/contracts.py",
    "src/dreamlayer/reality_compiler/v2/budgets.py",
    "src/dreamlayer/reality_compiler/v2/flash_safety.py",
    "src/dreamlayer/reality_compiler/v2/signer.py",
]
pytest_add_cli_args_test_selection = [
    "src/dreamlayer/tests/test_contracts_unit.py",
    "src/dreamlayer/tests/test_budgets_boundaries.py",
    "src/dreamlayer/tests/test_rc2_budgets.py",
    "src/dreamlayer/tests/test_flash_safety_unit.py",
    "src/dreamlayer/tests/test_flash_safety.py",
    "src/dreamlayer/tests/test_signer_boundaries.py",
    "src/dreamlayer/tests/test_rc2_vault.py",
]
